Add german translation and fully integrate it in Android

--- a/core/src/main/resources/StringsBundle_he.properties
+++ b/core/src/main/resources/StringsBundle_he.properties
@@ -1,13 +1,13 @@
 log_in_title = התחברות
-logging_in = מתחבר...
-could_not_log_in = לא הצלחנו להתחבר!
+logging_in = מתחבר…
+could_not_log_in = לא הצלחנו להתחבר\!
 verify_credentials = אנא וודא את פרטי ההתחברות שלך ונסה שנית
 ok = אישור
 your_basket_title = הסל שלך
 checkout = סיום קנייה
 processing_title = עיבוד הנתונים
-order_placed = ההזמנה שלך התקבלה!
-unexpected_error = אירעה שגיאה בלתי צפויה! אנא נסה שנית מאוחר יותר!
+order_placed = ההזמנה שלך התקבלה\!
+unexpected_error = אירעה שגיאה בלתי צפויה\! אנא נסה שנית מאוחר יותר\!
 first_name_required = נדרש להזין שם פרטי
 last_name_required = נדרש להזין שם משפחה
 address_required = נדרש להזין כתובת
@@ -16,14 +16,14 @@ zip_code_required = נדרש להזין מיקוד
 phone_number_required = נדרש להזין מספר טלפון
 country_required = נדרש להזין מדינה
 error = שגיאה
-tweet_text = כרגע בניתי אפליקציית iOS נייטיבית בJava באמצעות #RoboVM וכל מה שקיבלתי זה החולצה החינמית הזו!
+tweet_text = כרגע בניתי אפליקציית iOS נייטיבית בJava באמצעות \#RoboVM וכל מה שקיבלתי זה החולצה החינמית הזו\!
 try_again = נסה שוב
-processing_order = מעבד את ההזמנה...
+processing_order = מעבד את ההזמנה…
 order_complete = ההזמנה הסתיימה
 order_received = קיבלנו את ההזמנה שלך ונשלח לך מייל כאשר הפריטים שלך יישלחו.
 brag_twitter = השווץ בטוויטר
 done = סיום
-please_wait = אנא המתן...
+please_wait = אנא המתן…
 placing_order = מבצע הזמנה
 add_to_basket = הוסף לסל
 size = מידה
