Remove SwipableListItem, instead use a contextual action bar, highlight selected items

--- a/core/src/main/resources/StringsBundle_de.properties
+++ b/core/src/main/resources/StringsBundle_de.properties
@@ -49,3 +49,4 @@ basket_empty=Ihr Warenkorb ist leer
 go_add_something = Geh zurück und füg etwas hinzu.
 brag_to_friends = Prahle bei deinen Freunden
 explanation_text = Erledige eine kleine Aufgabe, um ein kostenloses T-Shirt zu bekommen.\nFüg deine RoboVM Account E-Mail-Adresse zu LoginFragment.java hinzu und komm hierher zurück.
+selected=ausgewählt
